automation - run several simulations using spreadsheet

--- a/RL/base_case.ipynb
+++ b/RL/base_case.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "a1236fb1",
    "metadata": {},
    "outputs": [],
@@ -35,29 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "615b5cb9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialize parameters of the DLC sequence x, y\n",
-    "case = 3\n",
-    "if case == 0:\n",
-    "    x = [[0,0,0]]\n",
-    "    y = [[0,0,0,0,0,0]]\n",
-    "    prefix = \"basecase\" \n",
-    "elif case == 1:\n",
-    "    x = [[1,1,1]]\n",
-    "    y = [[1,1,1,1,1,1]]\n",
-    "    prefix = \"offset1\"\n",
-    "elif case == 2:\n",
-    "    x = [[2,2,2]]\n",
-    "    y = [[2,2,2,2,2,2]]\n",
-    "    prefix = \"offset2\"\n",
-    "elif case == 3:\n",
-    "    x = [[3,3,3]]\n",
-    "    y = [[3,3,3,3,3,3]]\n",
-    "    prefix = \"offset3\"\n",
+    "# case = 3\n",
+    "# if case == 0:\n",
+    "#     x = [[0,0,0]]\n",
+    "#     y = [[0,0,0,0,0,0]]\n",
+    "#     prefix = \"basecase\" \n",
+    "# elif case == 1:\n",
+    "#     x = [[1,1,1]]\n",
+    "#     y = [[1,1,1,1,1,1]]\n",
+    "#     prefix = \"offset1\"\n",
+    "# elif case == 2:\n",
+    "#     x = [[2,2,2]]\n",
+    "#     y = [[2,2,2,2,2,2]]\n",
+    "#     prefix = \"offset2\"\n",
+    "# elif case == 3:\n",
+    "#     x = [[3,3,3]]\n",
+    "#     y = [[3,3,3,3,3,3]]\n",
+    "#     prefix = \"offset3\"\n",
     "\n",
     "\n",
     "a = 8.7*0.01  #$/kWh  off_peak_price\n",
@@ -175,7 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
+   "id": "03d97cff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scenarios_info = pd.read_excel('scenarios_definition.xlsx')\n",
+    "active_cases = scenarios_info[scenarios_info.active == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "8d5fc8c6",
    "metadata": {},
    "outputs": [],
@@ -184,22 +195,27 @@
     "sys.path.insert(0, 'C:\\EnergyPlusV23-1-0')  # add E-Plus directory to path to be able to import API\n",
     "from pyenergyplus.api import EnergyPlusAPI #import EnergyPlus library\n",
     "api = EnergyPlusAPI()\n",
-    "state = api.state_manager.new_state() \n",
-    "api.runtime.clear_callbacks()\n",
-    "api.functional.clear_callbacks()\n",
-    "# energyplus model calling point, callback function\n",
-    "api.runtime.callback_begin_system_timestep_before_predictor(state,my_callback_function)\n",
+    "\n",
     "# run EPlus\n",
-    "epwFile = 'POWER_Point_Hourly_20190101_20191231_043d6690N_079d6196W_LST.epw'\n",
-    "idfFile = '3-baseline_unitary_elec_v2.idf'\n",
+    "for i, row in active_cases.iterrows():\n",
+    "    idf_file = \"Models/\"+row.idf_file\n",
+    "    epw_file = row.epw_file\n",
+    "    output_dir = \"Results/Scenario_{}\".format(row.ID)\n",
+    "    x = [eval(row.offset_x)]\n",
+    "    y = [eval(row.offset_y)]\n",
     "\n",
-    "# -x short form to run expandobjects for HVACtemplates. see EnergyPlusEssentials.pdf p16\n",
-    "cmd_args = ['-w',epwFile, '-d', 'out_{}'.format(prefix),'-x',idfFile]\n",
-    "api.runtime.run_energyplus(state,cmd_args)\n",
+    "    state = api.state_manager.new_state() \n",
+    "    api.runtime.clear_callbacks()\n",
+    "    api.functional.clear_callbacks()\n",
+    "    # energyplus model calling point, callback function\n",
+    "    api.runtime.callback_begin_system_timestep_before_predictor(state,my_callback_function)\n",
+    "    # -x short form to run expandobjects for HVACtemplates. see EnergyPlusEssentials.pdf p16\n",
+    "    cmd_args = ['-w',epw_file, '-d', output_dir,'-x',idf_file]\n",
+    "    api.runtime.run_energyplus(state,cmd_args)\n",
     "\n",
-    "df = pd.DataFrame([cost_winter, cost_summer]).transpose()\n",
-    "df.columns = [\"cost_winter\",\"cost_summer\"]\n",
-    "df.to_csv('{}_data.csv'.format(prefix), index=False)"
+    "    df = pd.DataFrame([cost_winter, cost_summer]).transpose()\n",
+    "    df.columns = [\"cost_winter\",\"cost_summer\"]\n",
+    "    df.to_csv(output_dir+\"/algorithm_data.csv\", index=False)"
    ]
   },
   {
